fix: endpointy dla notyfikacji
